[tool.poetry]
name = "pysparkdemo"
version = "0.1.0"
description = "poetry pyspark demo"
authors = ["MinYang <mychen76@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.0.3"
pytest = "^6.2.5"
pytest-spark = "^0.6.0"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
pyspark = "^3.0.3"
chispa = "^0.8.3"
pytest = "^6.2.5"
pytest-spark = "^0.6.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "pysparkdemo" }
]
